# data_platform

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  dataproc_deployment.yaml  flow_dataproc_prefect.py  prefect.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
jobs/: job_pyspark.py
src/data_platform/: __init__.py
src/data_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/data_platform/core/: __init__.py  config.py  interfaces.py
src/data_platform/core/scraping/: __init__.py  detector.py  downloader.py  fetcher.py  normalizer.py  parser.py  prefect_tasks.py
src/data_platform/extractors/: __init__.py  base_api.py  base_html.py  factory.py  fnde_pdf.py  fnde_salario.py  fundeb_vaat.py  g1_news.py  mercadolivre.py  pdf_extractor.py  scraping_extractor.py
src/data_platform/flows/: __init__.py  ingestion_flow.py  universal_downloader.py
src/data_platform/scrapers/: __init__.py  base_scraper.py  fundeb_vaat_scraper.py  salario_educacao_scraper.py
src/data_platform/services/: __init__.py  gcs.py  pdf_processor.py  storage.py  storage_backends.py
tests/: test_extractors_factory.py  test_extractors_targets.py  test_flow_universal_downloader.py  test_fundeb_vaat_scraper.py  test_imports.py
