[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.mypy]
python_version = 3.10
warn_unused_configs = true

[project]
name = "data_platform"
version = "0.1.0"
description = "PoC de Engenharia de Dados com Prefect v3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"pandas==2.2.0",
	"prefect>=3.0.0",
	"pydantic>=2.6.0",
	"requests>=2.31.0",
	"pymupdf>=1.23.0",
	"beautifulsoup4>=4.12.0",
	"google-cloud-storage>=2.14.0",
	"google-cloud-bigquery>=3.15.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
